client/css/main.css
/* ... */
@media (max-width: 1043px) {
  .contain2:nth-child(2) {
    margin-left: 100px;
  }
}

@media (max-width: 918px) {

  .contain2:nth-child(2) {
    margin-left: 30px;
  }
}

@media (max-width: 890px) {
  .contain2:nth-child(1) {
    margin-left: 40px;
    margin-right:0px;
  }

  .contain2:nth-child(2) {
    margin-left: 40px;
  }

  .contain2 {
    clear: both;
    margin-left: 35px;
  }


  .halfpage2 {
    clear: both;
    width: 270px;
    float: none;
    overflow: auto;
    margin: 0 auto;
  }

  .halfpage-1 {
    width: 300px;
    float: none;
    clear: both;
    border-bottom: solid;
    border-right: none;
    margin: 0 auto;

  }

  .weather-grid {
    float: none;
    clear: both;
  }

  .weather-grid {
    margin: 0 auto;
  }

  .wedux-header {
    float: none !important;
  }


}

@media (max-width: 690px) {
   .weather-grid {
    margin: 0 auto;
  }
}  

.search-description {
  margin: 0 auto;
  width: 50%;
  text-align: center;
  font-size: 1.50rem;
}


/*end old*/



/*# sourceMappingURL=bootstrap.css.map */

